# demo-uv-dynamic-versioning

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/example_package/: __init__.py  main.py
tests/: test_main.py
